# StellarChoice

./: README-TR.md  README.md  README_TR.md  index.html  index.txt
.github/workflows/: main.yml
404/: index.html
_next/static/chunks/: 47.cd902cdf1475f74a.js  684-c772f8c9abedc75d.js  966-0b15569162dfe9b6.js  eef1a047.13eb7e279fa27fcf.js  main-229e87054a6257c0.js  main-app-22221db082457337.js  webpack-5c29d2b0efcc82b3.js
_next/static/chunks/app/: layout-5f9459335037feaf.js  page-625355d4a3526e4d.js
_next/static/css/: 40573e7b5ad01bc5.css
contract/: Cargo.toml
contract/.stellar/identity/: alice.toml  test-account.toml
contract/src/: lib.rs
contracts/: voting_contract.rs
frontend/: .eslintrc.json  next.config.ts  package-lock.json  package.json  postcss.config.mjs  tailwind.config.ts  tsconfig.json
frontend/app/: freighter-detector.js  globals.css  layout.tsx  page.tsx  providers.tsx
frontend/app/components/: FreighterConnector.tsx  FreighterDebug.tsx  TransactionHistory.tsx  Voting.tsx  WalletConnection.tsx  theme-provider.tsx
frontend/app/components/ui/: LoadingSpinner.tsx
frontend/app/contexts/: WalletContext.tsx
frontend/app/lib/: contractHelper.ts
frontend/app/utils/: freighterHelper.ts
frontend/types/: freighter.d.ts
